--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["JulioRaf4 <julio_tigger@hotmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = ">=3.8,<3.12"
 jupyter = "^1.1.1"
+
 
 
 [build-system]
