--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 jupyter = "^1.1.1"
+notebook = "^7.3.1"
+ipykernel = "^6.29.5"
 
 
 
